--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,12 @@
-1、配置统一控制
-1、helper提供保存操作，并返回文件信息
-2、打包nuget包
+.配置统一控制  √
+.helper提供保存操作，并返回文件信息 √
+.重构Attribute，要职责单一
+Require(必要字段)
+Int
+Default(default)
+Double(intLen,decimalLen)
+Decimal(intLen,decimalLen)
+Length(len)
+Range(from,to)
+DataSource(sourceType.getSourceHandler,ValueField)
+
